kubernetes/services/my-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-np
spec:
  type: NodePort
  selector:
    name: my-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
