kubernetes/services/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    name: redis-pod
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
