kubernetes/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  defaultBackend:
    service:
      name: my-app-np
      port:
        number: 8000
